k8s/base/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: chat
  name: chat
  labels:
    app: chat
spec:
  replicas: 3
  selector:
    matchLabels:
      app: chat
      azure.workload.identity/use: 'true'
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  minReadySeconds: 5
  template:
    metadata:
      labels:
        app: chat
        azure.workload.identity/use: 'true'
        prometheus.io/scrape: 'true'
    spec:
      serviceAccountName: ai-admin
      topologySpreadConstraints:
        - maxSkew: 1
          topologyKey: topology.kubernetes.io/zone
          whenUnsatisfiable: DoNotSchedule
          labelSelector:
            matchLabels:
              app: chat
        - maxSkew: 1
          topologyKey: kubernetes.io/hostname
          whenUnsatisfiable: DoNotSchedule
          labelSelector:
            matchLabels:
              app: chat
      nodeSelector:
        'kubernetes.io/os': linux
      containers:
        - name: chat
          image: msfintlnycdev1.azurecr.io/chatbot:latest-dev
          imagePullPolicy: Always
          resources:
            requests:
              memory: '256Mi'
              cpu: '100m'
            limits:
              memory: '512Mi'
              cpu: '500m'
          ports:
            - containerPort: 3000
          livenessProbe:
            httpGet:
              path: /healthz
              port: 3000
            failureThreshold: 1
            initialDelaySeconds: 60
            periodSeconds: 30
            timeoutSeconds: 5
          readinessProbe:
            httpGet:
              path: /healthz
              port: 3000
            failureThreshold: 1
            initialDelaySeconds: 60
            periodSeconds: 30
            timeoutSeconds: 5
          startupProbe:
            httpGet:
              path: /healthz
              port: 3000
            failureThreshold: 1
            initialDelaySeconds: 60
            periodSeconds: 30
            timeoutSeconds: 5
