k8s/base/service.yml
kind: Service
apiVersion: v1
metadata:
  namespace: chat
  name: chat
  labels:
    app: chat
spec:
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 3000
  selector:
    app: chat
  type: ClusterIP
